@@ -3,25 +3,23 @@ package com.impostoCalc.service.test;
 import com.impostoCalc.dtos.TaxTypeRequestDTO;
 import com.impostoCalc.dtos.TaxTypeResponseDTO;
 import com.impostoCalc.model.TaxType;
-import com.impostoCalc.repository.TaxTypeRepository;
 import com.impostoCalc.repository.CustomTaxTypeRepository;
+import com.impostoCalc.repository.TaxTypeRepository;
 import com.impostoCalc.service.TaxTypeService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 
-import java.util.Arrays;
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
 
 class TaxTypeServiceTest {
 
-    @InjectMocks
     private TaxTypeService taxTypeService;
 
     @Mock
@@ -33,6 +31,7 @@ class TaxTypeServiceTest {
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
+        taxTypeService = new TaxTypeService(taxTypeRepository, customTaxTypeRepository);
     }
 
     @Test
@@ -41,20 +40,22 @@ class TaxTypeServiceTest {
         TaxType taxType1 = new TaxType();
         taxType1.setId(1);
         taxType1.setNome("ICMS");
+        taxType1.setAliquota(BigDecimal.valueOf(18));
 
         TaxType taxType2 = new TaxType();
         taxType2.setId(2);
         taxType2.setNome("ISS");
+        taxType2.setAliquota(BigDecimal.valueOf(5));
 
-        when(taxTypeRepository.findAll()).thenReturn(Arrays.asList(taxType1, taxType2));
+        Mockito.when(taxTypeRepository.findAll()).thenReturn(List.of(taxType1, taxType2));
 
         // Act
         List<TaxTypeResponseDTO> result = taxTypeService.getAllTaxTypes();
 
         // Assert
-        assertNotNull(result);
         assertEquals(2, result.size());
-        verify(taxTypeRepository, times(1)).findAll();
+        assertEquals("ICMS", result.get(0).getNome());
+        assertEquals("ISS", result.get(1).getNome());
     }
 
     @Test
@@ -64,7 +65,7 @@ class TaxTypeServiceTest {
         taxType.setId(1);
         taxType.setNome("ICMS");
 
-        when(taxTypeRepository.findById(1)).thenReturn(Optional.of(taxType));
+        Mockito.when(taxTypeRepository.findById(1)).thenReturn(Optional.of(taxType));
 
         // Act
         TaxTypeResponseDTO result = taxTypeService.getTaxTypeById(1);
@@ -72,20 +73,37 @@ class TaxTypeServiceTest {
         // Assert
         assertNotNull(result);
         assertEquals("ICMS", result.getNome());
-        verify(taxTypeRepository, times(1)).findById(1);
     }
 
     @Test
     void testGetTaxTypeById_NotFound() {
         // Arrange
-        when(taxTypeRepository.findById(1)).thenReturn(Optional.empty());
+        Mockito.when(taxTypeRepository.findById(1)).thenReturn(Optional.empty());
 
         // Act & Assert
-        Exception exception = assertThrows(RuntimeException.class, () -> {
-            taxTypeService.getTaxTypeById(1);
-        });
-
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> taxTypeService.getTaxTypeById(1));
         assertEquals("Tipo de imposto não encontrado.", exception.getMessage());
-        verify(taxTypeRepository, times(1)).findById(1);
+    }
+
+    @Test
+    void testCreateTaxType() {
+        // Arrange
+        TaxTypeRequestDTO requestDTO = new TaxTypeRequestDTO();
+        requestDTO.setNome("ICMS");
+        requestDTO.setDescricao("Imposto sobre Circulação de Mercadorias e Serviços");
+        requestDTO.setAliquota(BigDecimal.valueOf(18));
+
+        TaxType taxType = new TaxType();
+        taxType.setId(1);
+        taxType.setNome("ICMS");
+
+        Mockito.when(taxTypeRepository.save(Mockito.any(TaxType.class))).thenReturn(taxType);
+
+        // Act
+        TaxTypeResponseDTO result = taxTypeService.createTaxType(requestDTO);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals("ICMS", result.getNome());
     }
 }
